cluster/apps/telegram/starwarssounds/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app starwarssounds
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: mariadb-starwarssounds
          image: mariadb:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mariadb-starwarssounds-volume
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 150Mi
        - name: *app
          image: ghcr.io/elraro/starwarssounds_bot:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 150Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: mariadb-starwarssounds-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/starwarssounds/mariadb-starwarssounds-volume
