cluster/apps/telegram/starwarssounds/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app starwarssounds
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
    - host: "botstelegram.${SECRET_DOMAIN}"
      http:
        paths:
          - path: "/${SECRET_STARWARSSOUNDS_TOKEN}/"
            pathType: Prefix
            backend:
              service:
                name: starwarssounds
                port:
                  number: 8080
  tls:
    - hosts:
        - "botstelegram.${SECRET_DOMAIN}"
      secretName: "botstelegram-tls"
